--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -3,7 +3,8 @@
 }
 
 .heading {
-    font-family: 'SFProText-Bold';
+    font-family: 'SFProText';
+    font-weight: bold;
     font-size: 28rem;
     letter-spacing: -1.45rem; //?
 }
