--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,1 +1,28 @@
-@use './typography'
+@use './typography';
+
+.text-underline {
+    position: relative;
+
+    &::after {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: .5rem;
+        bottom: -4rem;
+        left: 0;
+    }
+
+    &_low-opacity {
+        &::after {
+            opacity: .3;
+        }
+    }
+
+    &_color-primary::after {
+        background: var(--color-primary);
+    }
+
+    &_color-red::after {
+        background: var(--color-red);
+    }
+}
