--- a/src/style.css
+++ b/src/style.css
@@ -2,16 +2,16 @@
 
 @font-face {
     font-family: 'SFProText';
-    src: url('@/assets/fonts/SF-Pro-Text-Regular.woff2') format('woff2'),
-         url('@/assets/fonts/SF-Pro-Text-Regular.woff1') format('woff'),
-         url('@/assets/fonts/SF-Pro-Text-Regular.otf') format('otf');
+    src: url('./assets/fonts/SF-Pro-Text-Regular.woff2') format('woff2'),
+         url('./assets/fonts/SF-Pro-Text-Regular.woff') format('woff'),
+         url('./assets/fonts/SF-Pro-Text-Regular.otf') format('otf');
     font-weight: 400;
 }
 
 @font-face {
     font-family: 'SFProText';
     src: url('./assets/fonts/SF-Pro-Text-Bold.woff2') format('woff2'),
-         url('./assets/fonts/SF-Pro-Text-Bold.woff1') format('woff'),
+         url('./assets/fonts/SF-Pro-Text-Bold.woff') format('woff'),
          url('./assets/fonts/SF-Pro-Text-Bold.otf') format('otf');
     font-weight: 700;
 }
@@ -19,7 +19,7 @@
 @font-face {
     font-family: 'SFProText-Semibold';
     src: url('./assets/fonts/SF-Pro-Text-Semibold.woff2') format('woff2'),
-         url('./assets/fonts/SF-Pro-Text-Semibold.woff1') format('woff'),
+         url('./assets/fonts/SF-Pro-Text-Semibold.woff') format('woff'),
          url('./assets/fonts/SF-Pro-Text-Semibold.otf') format('otf');
     font-weight: 600;
 }
